# 2048-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md
include/: 2048_board.hpp  board_2048.hpp  coord.hpp  solver.hpp
include/tui/: board_ftxui.h  cell_test.hpp  homepage.hpp
src/: index.html  main.cpp
webassemblly/: 2048-tui.js  index.html
